--- a/index.html
+++ b/index.html
@@ -3,16 +3,40 @@
 
 <head>
   <title>linksocialmedia</title>
-  <link rel="shortcut icon" href="./img/logo.png" />
-  <link rel="stylesheet" type="text/css" href="./css/main.css">
-  <link rel="stylesheet" type="text/css" href="./css/slick.css" />
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <meta charset="UTF-8">
+
 </head>
 
 <body>
-  <img src="./img/background1.jpg" />
+  <main>
+    <header>
+      <img src="/img/fotocirculo.png" alt="Leonardo Odilon">
+      <h1>Leonardo</h1>
+      <p>@leonardoodilon</p>
+    </header>
+    <div class="col-100">
+      <div class="slider-principal">
+        <img class="slide" src="./img/facebook.png" />
+        <img class="slide" src="./img/linkedin.png " />
+        <img class="slide" src="./img/github.png" />
+      </div>
+      <div id="arrow-prev" class="arrow">
 
+      </div>
+      <div id="watch-name" class="description">
+
+      </div>
+      <div id="arrow-next" class="arrow">
+
+      </div>
+      <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+      <script type="text/javascript" src="./js/main.js"></script>
+  </main>
 </body>
 
 </html>
